Added single set reduction

--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4a6c1b7b3f7956ea7516b0dbe06d1de4be903e77d21e26c77d52859569163863"
+  "signature": "sha256:c655caa24c33eddc939dc3cec8bf23d12498453914fe5f0d4811b72c4a2f047e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,7 +55,7 @@
       "    copyFiles = True\n",
       "    overwrite = False\n",
       "    reduceMode = ''\n",
-      "    \n",
+      "    reduceSet = -1\n",
       "    \n",
       "    #general\n",
       "    target_root = ''\n",
@@ -131,15 +131,16 @@
       "            print '   Copying reduced flats and arcs to subsequent data sets'\n",
       "            self.copy_flat_arc()\n",
       "            \n",
-      "            #reduce datasets>0\n",
-      "            for i in range(1,len(self.ix_array)):\n",
-      "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
-      "                self.file_ix = self.ix_array[i]\n",
-      "                self.create_file_list(i)\n",
-      "    \n",
-      "                for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
-      "                    os.chdir(self.target_dir + str(cam+1) + '/')\n",
-      "                    self.reduce_science(self, cam, j)\n",
+      "        elif self.reduceMode=='single_set':\n",
+      "            #reduce single dataset\n",
+      "            i==self.reduceSet\n",
+      "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
+      "            self.file_ix = self.ix_array[i]\n",
+      "            self.create_file_list(i)\n",
+      "\n",
+      "            for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
+      "                os.chdir(self.target_dir + str(cam+1) + '/')\n",
+      "                self.reduce_science(self, cam, j)\n",
       "                \n",
       "    \n",
       "    \n",
@@ -412,7 +413,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
