added normal all_sets reduction

--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c655caa24c33eddc939dc3cec8bf23d12498453914fe5f0d4811b72c4a2f047e"
+  "signature": "sha256:d57258940aee4d852a6e8a7ae19ccc734bb707f23da2a53bf7281ab3ac54c36a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -63,6 +63,7 @@
       "    idxFile = ''\n",
       "    final_dir = ''\n",
       "    doReduce = False\n",
+      "    startFrom = 0\n",
       "    \n",
       "    #arrays\n",
       "    filename_prfx = '' #file prefixes (09jan, 12aug, ...)\n",
@@ -133,16 +134,27 @@
       "            \n",
       "        elif self.reduceMode=='single_set':\n",
       "            #reduce single dataset\n",
-      "            i==self.reduceSet\n",
+      "            i=self.reduceSet\n",
       "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "            self.file_ix = self.ix_array[i]\n",
       "            self.create_file_list(i)\n",
       "\n",
       "            for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
       "                os.chdir(self.target_dir + str(cam+1) + '/')\n",
-      "                self.reduce_science(self, cam, j)\n",
+      "                self.reduce_science(cam, j)\n",
       "                \n",
-      "    \n",
+      "        elif self.reduceMode=='starting_set':\n",
+      "            #reduce single dataset\n",
+      "            for i in range(self.startFrom,len(self.filename_prfx)):\n",
+      "\n",
+      "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
+      "                self.file_ix = self.ix_array[i]\n",
+      "                self.create_file_list(i)\n",
+      "\n",
+      "                for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
+      "                    os.chdir(self.target_dir + str(cam+1) + '/')\n",
+      "                    self.reduce_all()\n",
+      "\n",
       "    \n",
       "    def create_file_list(self, thisSetIx = 0 ):\n",
       "        # Creates the list of files to be reduced based on date, name and indices.        \n",
@@ -242,7 +254,7 @@
       "\n",
       "\n",
       "            #flat\n",
-      "            print '      >>Scrunching flat (whatever that means)'    \n",
+      "            print '      >>Scrunching flat'    \n",
       "            os_command =  'drcontrol'\n",
       "            os_command += ' reduce_fflat ' + j[0]\n",
       "            os_command += ' -idxfile ' + self.idxFile\n",
@@ -255,38 +267,8 @@
       "#             out = subprocess.call(os_command, env = env, shell = True)\n",
       "            os.system(os_command)\n",
       "            \n",
-      "            #THIS SHOULD CALL reduce_science\n",
       "            #science \n",
       "            self.reduce_science(cam, j)\n",
-      "#             obj_files = np.array(j[2:])\n",
-      "#             for obj in obj_files:\n",
-      "#                 try:\n",
-      "#                     os.rmdir(obj[:-5]+'_outdir')\n",
-      "#                 except OSError as ex:\n",
-      "#                     if ex.errno == 66:\n",
-      "#                         print 'Target folder (', obj[:-5]+'_outdir', 'not empty.'\n",
-      "#                         return False\n",
-      "\n",
-      "#                 print '      >>Reducing science '+ obj                        \n",
-      "#                 os.mkdir(obj[:-5]+'_outdir')                   \n",
-      "#                 os_command =  'drcontrol'\n",
-      "#                 os_command += ' reduce_object ' + obj\n",
-      "#                 os_command += ' -idxfile ' + self.idxFile\n",
-      "#                 os_command += ' -WAVEL_FILENAME ' + j[1][:-5] + 'red.fits'\n",
-      "# #                 if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
-      "#                 os_command += ' -TLMAP_FILENAME ' + j[0][:-5] + 'tlm.fits'\n",
-      "#                 os_command += ' -FFLAT_FILENAME ' + j[0][:-5] + 'red.fits'\n",
-      "#                 os_command += ' -OUT_DIRNAME ' + obj[:-5]+'_outdir'\n",
-      "# #                                 os_command += ' -TPMETH OFFSKY'\n",
-      "#                 os.system('killall drcontrol')\n",
-      "#                 os.system('killall drexec')\n",
-      "#                 print '      OS Command '+ os_command\n",
-      "# #                                     out = subprocess.call(os_command, env = env, shell = True)\n",
-      "#                 os.system(os_command)\n",
-      "    \n",
-      "#                 print '      Copying '+ obj[:-5]+'red.fits to ' + self.final_dir + 'cam' + str(cam+1) + '/'               \n",
-      "#                 shutil.copyfile(obj[:-5]+'red.fits', self.final_dir + 'cam' + str(cam+1) + '/' + obj[:-5]+'red.fits')\n",
-      "# #                                     shutil.copyfile(obj, '../../cam' +str(cam)+'/'+ obj)\n",
       "    \n",
       "    \n",
       "    \n",
