Added single cam reduction

--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d57258940aee4d852a6e8a7ae19ccc734bb707f23da2a53bf7281ab3ac54c36a"
+  "signature": "sha256:fb1f1eecdf0b33a68a90b74d44318ccf7b42e86b1daca94c794d65aae3523b88"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -38,7 +38,8 @@
       "import numpy as np\n",
       "import os\n",
       "import shutil\n",
-      "import subprocess "
+      "import subprocess \n",
+      "import time"
      ],
      "language": "python",
      "metadata": {},
@@ -56,6 +57,7 @@
       "    overwrite = False\n",
       "    reduceMode = ''\n",
       "    reduceSet = -1\n",
+      "    reduceCam = -1\n",
       "    \n",
       "    #general\n",
       "    target_root = ''\n",
@@ -84,7 +86,7 @@
       "        \n",
       "        ############### Copy bit\n",
       "        if self.copyFiles==True:\n",
-      "            print 'Copying all data files...'\n",
+      "            print time.strftime('%X %x %Z'),'Copying all data files...'\n",
       "            for thisSetIx in range(len(self.filename_prfx)):\n",
       "                \n",
       "                print '   ' + self.filename_prfx[thisSetIx]\n",
@@ -104,10 +106,10 @@
       "        \n",
       "                            if not os.path.exists(dst):\n",
       "                                shutil.copy(src, dst)\n",
-      "                                print '      Copied '+ dst\n",
+      "                                print time.strftime('%X %x %Z'),'      Copied '+ dst\n",
       "        \n",
-      "            print 'End of file copy'\n",
-      "            print ''\n",
+      "            print time.strftime('%X %x %Z'),'End of file copy'\n",
+      "            print time.strftime('%X %x %Z'),''\n",
       "\n",
       "            \n",
       "        ############### Reduction bit\n",
@@ -121,15 +123,15 @@
       "            self.create_file_list(0)\n",
       "\n",
       "            if self.doReduce==True:\n",
-      "                print '  Reducing first frame', self.filename_prfx[0]\n",
+      "                print time.strftime('%X %x %Z'),'  Reducing first frame', self.filename_prfx[0]\n",
       "                self.reduce_all() \n",
-      "                print '  First frame reduced', self.filename_prfx[0]\n",
-      "                print ''\n",
+      "                print time.strftime('%X %x %Z'),'  First frame reduced', self.filename_prfx[0]\n",
+      "                print time.strftime('%X %x %Z'),''\n",
       "            else:\n",
-      "                print 'Reduction flag turned off. All done.'\n",
+      "                print time.strftime('%X %x %Z'),'Reduction flag turned off. All done.'\n",
       "            \n",
       "            #replace flats and arcs for datasets>0\n",
-      "            print '   Copying reduced flats and arcs to subsequent data sets'\n",
+      "            print time.strftime('%X %x %Z'),'   Copying reduced flats and arcs to subsequent data sets'\n",
       "            self.copy_flat_arc()\n",
       "            \n",
       "        elif self.reduceMode=='single_set':\n",
@@ -138,22 +140,19 @@
       "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "            self.file_ix = self.ix_array[i]\n",
       "            self.create_file_list(i)\n",
-      "\n",
-      "            for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
-      "                os.chdir(self.target_dir + str(cam+1) + '/')\n",
-      "                self.reduce_science(cam, j)\n",
+      "            \n",
+      "            self.reduce_all()\n",
       "                \n",
       "        elif self.reduceMode=='starting_set':\n",
       "            #reduce single dataset\n",
       "            for i in range(self.startFrom,len(self.filename_prfx)):\n",
-      "\n",
+      "                \n",
+      "                print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
       "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "                self.file_ix = self.ix_array[i]\n",
       "                self.create_file_list(i)\n",
-      "\n",
-      "                for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
-      "                    os.chdir(self.target_dir + str(cam+1) + '/')\n",
-      "                    self.reduce_all()\n",
+      "            \n",
+      "                self.reduce_all()\n",
       "\n",
       "    \n",
       "    def create_file_list(self, thisSetIx = 0 ):\n",
@@ -162,7 +161,8 @@
       "        self.files2 =  [self.filename_prfx[thisSetIx] +'2' + str(name).zfill(4)+ '.fits' for name in self.file_ix]\n",
       "        self.files3 =  [self.filename_prfx[thisSetIx] +'3' + str(name).zfill(4)+ '.fits' for name in self.file_ix]\n",
       "        self.files4 =  [self.filename_prfx[thisSetIx] +'4' + str(name).zfill(4)+ '.fits' for name in self.file_ix]\n",
-      "\n",
+      "        \n",
+      "        print time.strftime('%X %x %Z'),'Created filenames for 4 channels. Example:', str(self.files1)\n",
       "        \n",
       "        \n",
       "    def create_folders(self):\n",
@@ -172,10 +172,10 @@
       "        except OSError as ex:\n",
       "            if ((ex.errno == 66) or (ex.errno == 17)):\n",
       "                if self.overwrite==True:\n",
-      "                    print '>>>> Overwriting', self.target_dir\n",
+      "                    print time.strftime('%X %x %Z'),'>>>> Overwriting', self.target_dir\n",
       "                    os.system('rm -r '+self.target_dir )\n",
       "                else:\n",
-      "                    print 'Target folder', self.target_dir,' not empty. Overwrite is off. '\n",
+      "                    print time.strftime('%X %x %Z'),'Target folder', self.target_dir,' not empty. Overwrite is off. '\n",
       "                    return False\n",
       "        os.mkdir(self.target_dir)\n",
       "        os.mkdir(self.target_dir+'1/')\n",
@@ -189,7 +189,7 @@
       "            os.mkdir(self.final_dir+'cam3/')\n",
       "            os.mkdir(self.final_dir+'cam4/')\n",
       "        except:\n",
-      "            print '>>>> Final folder creation failed(no biggie), please check '+self.final_dir\n",
+      "            print time.strftime('%X %x %Z'),'>>>> Final folder creation failed(no biggie), please check '+self.final_dir\n",
       "        return True\n",
       "    \n",
       "    \n",
@@ -201,74 +201,74 @@
       "                \n",
       "        #start reduction   \n",
       "        for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
-      "            os.chdir(self.target_dir + str(cam+1) + '/')\n",
-      "            print '      Flat ',j[0]\n",
-      "            print '      Arc ',j[1]\n",
-      "            print '      Science files ' + str(j[2:])\n",
+      "            if ((self.reduceCam==-1) or (self.reduceCam==cam)):\n",
+      "                os.chdir(self.target_dir + str(cam+1) + '/')\n",
+      "                print time.strftime('%X %x %Z'),'current folders is',self.target_dir + str(cam+1) + '/'\n",
       "\n",
-      "            \n",
-      "            #flat\n",
-      "            try:\n",
-      "                os.rmdir(self.target_dir + str(cam+1) + '/' + j[0][:-5]+'_outdir')\n",
-      "            except OSError as ex:\n",
-      "                if ex.errno == 66:\n",
-      "                    print \"Target folder not empty.\"\n",
-      "                    return False\n",
-      "\n",
-      "            print '      >>Reducing flat'    \n",
-      "            os.mkdir (j[0][:-5]+'_outdir')                   \n",
-      "            os_command =  'drcontrol'\n",
-      "            os_command += ' reduce_fflat ' + j[0]\n",
-      "#            if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
-      "            os_command += ' -idxfile ' + self.idxFile\n",
-      "            os_command += ' -OUT_DIRNAME '  + j[0][:-5]+'_outdir'\n",
-      "            os.system('killall drcontrol')\n",
-      "            os.system('killall drexec')\n",
-      "            print '      OS Command '+ os_command\n",
-      "#             out = subprocess.call(os_command, env = env, shell = True)\n",
-      "            os.system(os_command)\n",
-      "    \n",
-      "    \n",
-      "            #arc                 \n",
-      "            try:\n",
-      "                os.rmdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')\n",
-      "            except OSError as ex:\n",
-      "                if ex.errno == 66:\n",
-      "                    print \"Target folder not empty.\"\n",
-      "                    return False\n",
-      "                \n",
-      "            print '      >>Reducing arc'    \n",
-      "            os.mkdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')                   \n",
-      "            os_command =  'drcontrol'\n",
-      "            os_command += ' reduce_arc '  + j[1]\n",
-      "#             if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
-      "            os_command += ' -idxfile ' + self.idxFile\n",
-      "            os_command += ' -TLMAP_FILENAME ' + j[0][:-5] + 'tlm.fits'\n",
-      "            os_command += ' -OUT_DIRNAME ' + j[1][:-5]+'_outdir'\n",
-      "            os.system('killall drcontrol')\n",
-      "            os.system('killall drexec')\n",
-      "            print '      OS Command '+ os_command\n",
-      "#             out = subprocess.call(os_command, env = env, shell = True)\n",
-      "            os.system(os_command)\n",
-      "#                         shutil.copyfile(j[self.flat][:-5] + 'tlm.fits', '../../cam' +str(cam)+'/'+ j[self.flat][:-5] + 'tlm.fits')\n",
+      "                print '      Flat ',j[0]\n",
+      "                print '      Arc ',j[1]\n",
+      "                print '      Science files ' + str(j[2:])\n",
       "\n",
       "\n",
-      "            #flat\n",
-      "            print '      >>Scrunching flat'    \n",
-      "            os_command =  'drcontrol'\n",
-      "            os_command += ' reduce_fflat ' + j[0]\n",
-      "            os_command += ' -idxfile ' + self.idxFile\n",
-      "#             if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
-      "            os_command += ' -WAVEL_FILENAME ' + j[1][:-5] + 'red.fits'\n",
-      "            os_command += ' -OUT_DIRNAME ' + j[0][:-5]+'_outdir'\n",
-      "            os.system('killall drcontrol')\n",
-      "            os.system('killall drexec')\n",
-      "            print '      OS Command '+ os_command\n",
-      "#             out = subprocess.call(os_command, env = env, shell = True)\n",
-      "            os.system(os_command)\n",
-      "            \n",
-      "            #science \n",
-      "            self.reduce_science(cam, j)\n",
+      "                #flat\n",
+      "                try:\n",
+      "                    os.rmdir(self.target_dir + str(cam+1) + '/' + j[0][:-5]+'_outdir')\n",
+      "                except OSError as ex:\n",
+      "                    if ex.errno == 66:\n",
+      "                        print \"Target folder not empty.\"\n",
+      "                        return False\n",
+      "\n",
+      "                print time.strftime('%X %x %Z'),'      >>Reducing flat'    \n",
+      "                os.mkdir (j[0][:-5]+'_outdir')                   \n",
+      "                os_command =  'drcontrol'\n",
+      "                os_command += ' reduce_fflat ' + j[0]\n",
+      "    #            if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
+      "                os_command += ' -idxfile ' + self.idxFile\n",
+      "                os_command += ' -OUT_DIRNAME '  + j[0][:-5]+'_outdir'\n",
+      "                os.system('cleanup')\n",
+      "                print '      OS Command '+ os_command\n",
+      "    #             out = subprocess.call(os_command, env = env, shell = True)\n",
+      "                os.system(os_command)\n",
+      "\n",
+      "\n",
+      "                #arc                 \n",
+      "                try:\n",
+      "                    os.rmdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')\n",
+      "                except OSError as ex:\n",
+      "                    if ex.errno == 66:\n",
+      "                        print \"Target folder not empty.\"\n",
+      "                        return False\n",
+      "\n",
+      "                print time.strftime('%X %x %Z'),'      >>Reducing arc'    \n",
+      "                os.mkdir(self.target_dir + str(cam+1) + '/' + j[1][:-5]+'_outdir')                   \n",
+      "                os_command =  'drcontrol'\n",
+      "                os_command += ' reduce_arc '  + j[1]\n",
+      "    #             if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
+      "                os_command += ' -idxfile ' + self.idxFile\n",
+      "                os_command += ' -TLMAP_FILENAME ' + j[0][:-5] + 'tlm.fits'\n",
+      "                os_command += ' -OUT_DIRNAME ' + j[1][:-5]+'_outdir'\n",
+      "                os.system('cleanup')\n",
+      "                print '      OS Command '+ os_command\n",
+      "    #             out = subprocess.call(os_command, env = env, shell = True)\n",
+      "                os.system(os_command)\n",
+      "    #                         shutil.copyfile(j[self.flat][:-5] + 'tlm.fits', '../../cam' +str(cam)+'/'+ j[self.flat][:-5] + 'tlm.fits')\n",
+      "\n",
+      "\n",
+      "                #flat\n",
+      "                print time.strftime('%X %x %Z'),'      >>Scrunching flat'    \n",
+      "                os_command =  'drcontrol'\n",
+      "                os_command += ' reduce_fflat ' + j[0]\n",
+      "                os_command += ' -idxfile ' + self.idxFile\n",
+      "    #             if useBias==True: os_command += ' -BIAS_FILENAME BIAScombined.fits'\n",
+      "                os_command += ' -WAVEL_FILENAME ' + j[1][:-5] + 'red.fits'\n",
+      "                os_command += ' -OUT_DIRNAME ' + j[0][:-5]+'_outdir'\n",
+      "                os.system('cleanup')\n",
+      "                print '      OS Command '+ os_command\n",
+      "    #             out = subprocess.call(os_command, env = env, shell = True)\n",
+      "                os.system(os_command)\n",
+      "\n",
+      "                #science \n",
+      "                self.reduce_science(cam, j)\n",
       "    \n",
       "    \n",
       "    \n",
@@ -330,7 +330,7 @@
       "                    print 'Target folder (', obj[:-5]+'_outdir', 'not empty.'\n",
       "                    return False\n",
       "\n",
-      "            print '      >>Reducing science '+ obj                        \n",
+      "            print time.strftime('%X %x %Z'),'      >>Reducing science '+ obj                        \n",
       "            os.mkdir(obj[:-5]+'_outdir')                   \n",
       "            os_command =  'drcontrol'\n",
       "            os_command += ' reduce_object ' + obj\n",
@@ -341,8 +341,8 @@
       "            os_command += ' -FFLAT_FILENAME ' + j[0][:-5] + 'red.fits'\n",
       "            os_command += ' -OUT_DIRNAME ' + obj[:-5]+'_outdir'\n",
       "#                                 os_command += ' -TPMETH OFFSKY'\n",
-      "            os.system('killall drcontrol')\n",
-      "            os.system('killall drexec')\n",
+      "            os.system('cleanup')\n",
+      "\n",
       "            print '      OS Command '+ os_command\n",
       "#                                     out = subprocess.call(os_command, env = env, shell = True)\n",
       "            os.system(os_command)\n",
@@ -387,8 +387,7 @@
       "                        os_command =  'drcontrol'\n",
       "                        os_command += ' reduce_bias ' + obj\n",
       "                        os_command += ' -idxfile ' + idxFile\n",
-      "                        os.system('killall drcontrol')\n",
-      "                        os.system('killall drexec')\n",
+      "                        os.system('clenaup')\n",
       "                        os.system(os_command)\n",
       "   \n"
      ],
@@ -400,11 +399,57 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "import subprocess as sp\n",
+      "import os"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "# os.system('ls')\n",
+      "sp.call('printenv $PATH', shell=True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sp.STDOUT(DISPLAY)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'DISPLAY' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-32-5d765bc3c6ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSTDOUT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDISPLAY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mNameError\u001b[0m: name 'DISPLAY' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
