--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fb1f1eecdf0b33a68a90b74d44318ccf7b42e86b1daca94c794d65aae3523b88"
+  "signature": "sha256:a4c80b8327d0a2ba711e420517a66eb6973595b0780c08c04f0a5321720ed0d3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -137,6 +137,7 @@
       "        elif self.reduceMode=='single_set':\n",
       "            #reduce single dataset\n",
       "            i=self.reduceSet\n",
+      "            print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
       "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "            self.file_ix = self.ix_array[i]\n",
       "            self.create_file_list(i)\n",
