--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:25855b3d62151e984053e5bf3d0ca38cb015c46ab50725b68e7f0052986675d0"
+  "signature": "sha256:9efdba2a95d9f92f06e528fedcf74f0e5a13ef6ffa6e6eb8e1d58cdca11b43fd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -118,14 +118,14 @@
       "\n",
       "            #first do the 1st reduction as usual\n",
       "            \n",
-      "            self.target_dir = self.target_root + str(0) + '_'+ self.filename_prfx[0] +'/'\n",
-      "            self.file_ix = self.ix_array[0]\n",
-      "            self.create_file_list(0)\n",
+      "            self.target_dir = self.target_root + str(self.startFrom) + '_'+ self.filename_prfx[self.startFrom] +'/'\n",
+      "            self.file_ix = self.ix_array[self.startFrom]\n",
+      "            self.create_file_list(self.startFrom)\n",
       "\n",
       "            if self.doReduce==True:\n",
-      "                print time.strftime('%X %x %Z'),'  Reducing first frame', self.filename_prfx[0]\n",
+      "                print time.strftime('%X %x %Z'),'  Reducing master frame', self.filename_prfx[self.startFrom]\n",
       "                self.reduce_all() \n",
-      "                print time.strftime('%X %x %Z'),'  First frame reduced', self.filename_prfx[0]\n",
+      "                print time.strftime('%X %x %Z'),'  First master reduced', self.filename_prfx[self.startFrom]\n",
       "                print time.strftime('%X %x %Z'),''\n",
       "            else:\n",
       "                print time.strftime('%X %x %Z'),'Reduction flag turned off. All done.'\n",
@@ -133,6 +133,17 @@
       "            #replace flats and arcs for datasets>0\n",
       "            print time.strftime('%X %x %Z'),'   Copying reduced flats and arcs to subsequent data sets'\n",
       "            self.copy_flat_arc()\n",
+      "\n",
+      "            no_masters = range(len(self.filename_prfx))\n",
+      "            no_masters.remove(int(self.startFrom))\n",
+      "            for i in no_masters:\n",
+      "\n",
+      "                print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
+      "                self.file_ix = self.ix_array[i]\n",
+      "                self.create_file_list(i)\n",
+      "            \n",
+      "                self.reduce_all()\n",
       "            \n",
       "        elif self.reduceMode=='single_set':\n",
       "            #reduce single dataset\n",
@@ -144,6 +155,18 @@
       "            \n",
       "            self.reduce_all()\n",
       "                \n",
+      "        elif self.reduceMode=='single_set_science':\n",
+      "            #reduce single dataset\n",
+      "            i=self.reduceSet\n",
+      "            print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
+      "            self.file_ix = self.ix_array[i]\n",
+      "            self.create_file_list(i)\n",
+      "            \n",
+      "            for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
+      "                if ((self.reduceCam==-1) or (self.reduceCam==cam)):\n",
+      "                    self.reduce_science(cam, j)\n",
+      "                \n",
       "        elif self.reduceMode=='starting_set':\n",
       "            #reduce single dataset\n",
       "            for i in range(self.startFrom,len(self.filename_prfx)):\n",
@@ -154,6 +177,19 @@
       "                self.create_file_list(i)\n",
       "            \n",
       "                self.reduce_all()\n",
+      "\n",
+      "        elif self.reduceMode=='starting_set_science':\n",
+      "            #reduce single dataset\n",
+      "            for i in range(self.startFrom,len(self.filename_prfx)):\n",
+      "                \n",
+      "                print time.strftime('%X %x %Z'),'---------------Starting Dataset #', i\n",
+      "                self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
+      "                self.file_ix = self.ix_array[i]\n",
+      "                self.create_file_list(i)\n",
+      "            \n",
+      "                for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
+      "                    if ((self.reduceCam==-1) or (self.reduceCam==cam)):\n",
+      "                        self.reduce_science(cam, j)\n",
       "\n",
       "    \n",
       "    def create_file_list(self, thisSetIx = 0 ):\n",
@@ -278,9 +314,9 @@
       "    def copy_flat_arc(self):     \n",
       "        \n",
       "        #crates the list of source files fro dataset=0\n",
-      "        self.target_dir = self.target_root + str(0) + '_'+ self.filename_prfx[0] +'/'\n",
-      "        self.file_ix = self.ix_array[0]\n",
-      "        self.create_file_list(0)\n",
+      "        self.target_dir = self.target_root + str(self.startFrom) + '_'+ self.filename_prfx[self.startFrom] +'/'\n",
+      "        self.file_ix = self.ix_array[self.startFrom]\n",
+      "        self.create_file_list(self.startFrom)\n",
       "        src_list = []\n",
       "        for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
       "            src_list.append(self.target_dir + str(cam+1) + '/' +j[0])\n",
@@ -294,7 +330,9 @@
       "            src_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'red.fits')\n",
       "        \n",
       "        #for all datasets>0 create target_list and copy src_list to target_list\n",
-      "        for i in range(1,len(self.ix_array)):\n",
+      "        no_masters = range(len(self.ix_array))\n",
+      "        no_masters.remove(int(self.startFrom))\n",
+      "        for i in no_masters:\n",
       "            self.target_dir = self.target_root + str(i) + '_'+ self.filename_prfx[i] +'/'\n",
       "            self.file_ix = self.ix_array[i]\n",
       "            self.create_file_list(i)\n",
